--- a/client/style.css
+++ b/client/style.css
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
     color: var(--basecolor);
+    font-family: "Ubuntu", sans-serif !important;
 }
 
 body {
@@ -25,6 +26,8 @@ main {
 p {
     text-align: justify;
     margin-bottom: 5px;
+    font-size: 20px;
+    font-weight: 500;
 }
 
 header {
@@ -43,6 +46,21 @@ header div {
 
 header nav {
     float: right;
+    display: flex;
+    align-items: center;
+    height: 40px;
+}
+
+h1 {
+    font-size: 30px;
+    font-weight: 700;
+    letter-spacing: 2px;
+}
+
+nav a {
+    font-weight: 500;
+    font-size: 20px;
+    margin-left: 10px;
 }
 
 div.block {
@@ -51,7 +69,6 @@ div.block {
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px;
-    background-color: rgb(40,40,40);
 }
 
 div.text {
