--- a/client/style.css
+++ b/client/style.css
@@ -57,6 +57,12 @@ h1 {
     letter-spacing: 2px;
 }
 
+h2 {
+    font-size: 35px;
+    font-weight: 800px;
+    letter-spacing: 3px;
+}
+
 nav button {
     font-weight: 500;
     font-size: 20px;
@@ -98,9 +104,21 @@ img#omszLogo {
     position: absolute;
     left: 10px;
     top: 10px;
+    z-index: 2000;
     width: 20%;
     max-width: 150px;
     min-width: 80px;
+    pointer-events: none;
+}
+
+img#mavirLogo {
+    position: absolute;
+    right: 10px;
+    top: 10px;
     z-index: 2000;
+    width: 10%;
+    max-width: 72px;
+    min-width: 36px;
+    pointer-events: none;
 }
 
