--- a/client/style.css
+++ b/client/style.css
@@ -16,6 +16,15 @@ body {
     font-size: medium;
 }
 
+html {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+    display: none;
+}
+
 main {
     max-width: 1100px;
     margin: auto;
