--- a/client/style/style.css
+++ b/client/style/style.css
@@ -86,6 +86,12 @@ h1 {
     text-align: center;
 }
 
+abbr[title] {
+    border-bottom: none !important;
+    cursor: inherit !important;
+    text-decoration: none !important;
+}
+
 h2 {
     font-size: 35px;
     font-weight: 800px;
@@ -97,6 +103,18 @@ nav button {
     font-weight: 500;
     font-size: 20px;
     margin-left: 10px;
+}
+
+button#language {
+    background: none;
+    border: none;
+    padding: 6px 0;
+    height: 40px;
+}
+
+button#language img {
+    height: 28px;
+    border-radius: 6px;
 }
 
 div.block {
@@ -123,8 +141,40 @@ div.container {
     border-radius: 25px;
 }
 
-#omszStationMapDiv{
+#omszStationMapDiv {
     position: relative;
+}
+
+div.loading {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: rgba(100, 100, 100, 0.4);
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    transition: 0.5s;
+}
+
+div.loading>div.spinner {
+    width: 75px;
+    height: 75px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-43.5px, -43.5px);
+    /* half width + border */
+    border: rgba(50, 50, 50, 0.8) solid 6px;
+    border-top: rgba(255, 255, 255, 1) solid 6px;
+    border-radius: 75px;
+    animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+    100% {
+        transform: translate(-43.5px, -43.5px) rotate(360deg);
+    }
 }
 
 .hider {
