Language and styling

--- a/client/style/style.css
+++ b/client/style/style.css
@@ -143,7 +143,7 @@ div.container {
 
 #omszStationMapDiv {
     position: relative;
-    min-height: 600px;
+    min-height: 672px; /* KEEP CONSISTENT WITH omszMapHeight!!! */
 }
 
 #mavirPlotDiv {
