--- a/client/style/style.css
+++ b/client/style/style.css
@@ -2,7 +2,7 @@
     --background: #0e010d;
     --onbackground: #feeeff;
     --onprimary: #feeeff;
-    --secondary: #5cb603;
+    --secondary: #2ecb39;
     --onsecondary: #0e010d;
     --disabled: #6f676f;
 }
@@ -29,12 +29,11 @@ body {
 }
 
 html {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-
-html::-webkit-scrollbar {
-    display: none;
+    overflow: overlay;
+    scrollbar-gutter: auto;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: var(--onprimary) transparent;
 }
 
 main {
@@ -110,6 +109,7 @@ nav button {
 nav button {
     background: none;
     color: var(--onprimary);
+    box-shadow: none;
 }
 
 nav button.onpage {
@@ -133,6 +133,7 @@ button#language {
     border: none;
     padding: 0;
     margin-top: 6px;
+    margin-right: 0;
     height: 40px;
 }
 
@@ -255,6 +256,7 @@ div.inputs {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    row-gap: 10px;
 }
 
 input,
@@ -263,8 +265,8 @@ select,
 label {
     font-size: 24px;
     font-weight: 400;
-    margin-right: 10px;
     padding: 5px;
+    margin-right: 10px;
     border: none;
     border-radius: 16px;
     background-color: var(--secondary);
@@ -272,6 +274,12 @@ label {
     color: var(--onsecondary);
     cursor: pointer;
     transition: 0.2s;
+}
+
+input,
+button,
+select {
+    box-shadow: 2px 2px rgba(255, 255, 255, 0.2) inset, 0 0 2px 2px rgba(0, 0, 0, 0.6) inset;
 }
 
 input:hover,
@@ -317,15 +325,16 @@ input[type="datetime-local"]:focus {
 input[type="checkbox"] {
     -webkit-appearance: none;
     appearance: none;
-    padding: 10px;
+    padding: 12px;
     background: var(--disabled) !important;
-    border: 1px solid var(--disabled);
+    outline: none;
+    border: none;
     display: inline-block;
+    margin-bottom: -3px;
     margin-right: 0;
 }
 
 input[type="checkbox"]:checked {
-    border-color: var(--secondary) !important;
     background-color: var(--secondary) !important;
 }
 
@@ -354,18 +363,37 @@ input[type="checkbox"]:checked+label {
 }
 
 @media screen and (max-width: 530px) {
+    h2 {
+        font-size: 30px;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
     header div h1 {
         display: none;
     }
 
     nav button {
         margin-left: 0;
-        font-size: 100%;
+        font-size: 16px;
     }
 
     button#language {
         padding: 6px 0;
         height: 30px;
         margin-top: -6px;
+    }
+
+    input,
+    button,
+    select,
+    label {
+        font-size: 26px;
+        font-weight: 400;
+        padding: 6px;
+        margin-right: 15px;
+        border-radius: 18px;
     }
 }
