--- a/client/style/style.css
+++ b/client/style/style.css
@@ -93,7 +93,7 @@ abbr[title] {
 
 h2 {
     font-size: 35px;
-    font-weight: 800px;
+    font-weight: 800;
     letter-spacing: 3px;
     text-align: center;
 }
